# ecd-trabajo-final

./: .gitignore  .pre-commit-config.yaml  Dockerfile.mlflow  README.md  docker-compose.yaml  pyproject.toml
images/: redes.excalidraw
notebooks/: 2d_model.ipynb  3d_alternate-mlflow.ipynb  3d_model.ipynb  3d_model_2.ipynb  3d_molchanov-2-mlflow.ipynb  3d_molchanov-mlflow.ipynb  3d_molchanov.ipynb  3d_nin-mlflow.ipynb  3d_resnet-mlflow.ipynb  3d_resnet.ipynb  compare-models-b.ipynb  compare-models.ipynb  data.ipynb  eda.ipynb  model.ipynb  nin.ipynb  opencv.ipynb  parsing-dynamo-2.py  parsing-dynamo.py  playground.ipynb
recognizer/: test.ipynb
recognizer/dataset/: __init__.py  image_dataset.py  sampled_video_dataset.py  video_dataset.py
recognizer/models/: alternate_3d.py  basic.py  molchanov_3d.py  nin.py  resnet_3d.py  simple.py  simple_2d.py  simple_3d.py
recognizer/trainers/: trainer.py
recognizer/utils/: constants.py  utils.py  video_processor.py
