[tool.poetry]
name = "ecd-trabajo-final"
version = "0.1.0"
description = "Trabajo final de la ECD - ITBA"
authors = ["Facu Palavecino <palav.facundo@gmail.com>"]
readme = "README.md"
packages = [{include = "ecd_trabajo_final"}]

[tool.poetry.dependencies]
python = ">=3.8.1, <3.11"
numpy = "^1.24.1"
pandas = "^1.5.2"
matplotlib = "^3.6.2"
seaborn = "^0.12.2"
scikit-learn = "^1.2.0"
tensorflow = "^2.11.0"
pytest = "^7.2.0"
mypy = "^0.991"
pylint = "^2.15.10"
flake8 = "^6.0.0"
black = "^22.12.0"
isort = "^5.11.4"
pre-commit = "^2.21.0"
pytest-cov = "^4.0.0"
scipy = "^1.10.0"
jupyter = "^1.0.0"
ipykernel = "^6.20.1"
mat73 = "^0.59"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
